--- a/hdc-app/package.json
+++ b/hdc-app/package.json
@@ -8,8 +8,10 @@
     "@types/react": "16.8.19",
     "@types/react-dom": "16.8.4",
     "bootstrap": "^4.3.1",
+    "chart.js": "^2.8.0",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.8",
+    "react-chartjs-2": "^2.7.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
     "tslint": "^5.17.0",
