[add] デプロイに向けた調整を実施

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ hdc-utility/.idea/workspace.xml
 hdc-utility/__pycache__/
 hdc-utility/model/__pycache__/
 hdc-utility/service/__pycache__/
+hdc-app/.firebase/
