--- a/hdc-app/package.json
+++ b/hdc-app/package.json
@@ -12,7 +12,7 @@
     "chart.js": "^2.9.4",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.0",
-    "react-chartjs-2": "^2.11.1",
+    "react-chartjs-2": "2.11.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
     "tslint": "^6.1.3",
